refactoring a code
